fluence/tests/records/struct_with_private_fields.rs
#![allow(improper_ctypes)]

use fluence::fce;

fn main() {}

#[fce]
struct StructWithPrivateFields {
    a: i32,
    b: usize,
}
